created script in base frontend folder with project urls and edited all references to urls in the project

--- a/FrontEnd/grouppage/group-page.html
+++ b/FrontEnd/grouppage/group-page.html
@@ -186,6 +186,7 @@
     </div>
     <script src="group.js"></script>
   </body>
+  <script src="../urlinfo.js"></script>
   <script src="../grouppage/allgroups.js"></script>
   <script src="../grouppage/usergroups.js"></script>
 </html>
