--- a/FrontEnd/grouppage/individualgrouppage/individual-group-page.html
+++ b/FrontEnd/grouppage/individualgrouppage/individual-group-page.html
@@ -214,6 +214,7 @@
         </div>
       </div>
     </div>
+    <script src="../../urlinfo.js"></script>
     <script src="group_post.js"></script>
     <script src="../individual-group.js"></script>
   </body>
