--- a/FrontEnd/grouppage/group.html
+++ b/FrontEnd/grouppage/group.html
@@ -18,6 +18,7 @@
         <button id="submitCreateGroup" type="button">Create Group</button>
       </form>
     </section>
+    <script src="../urlinfo.js"></script>
     <script src="group.js"></script>
   </body>
 </html>
