--- a/FrontEnd/loginpage/login.html
+++ b/FrontEnd/loginpage/login.html
@@ -120,5 +120,6 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"
   ></script>
+  <script src="../urlinfo.js"></script>
   <script src="login.js"></script>
 </html>
