--- a/FrontEnd/profilepage/Search.html
+++ b/FrontEnd/profilepage/Search.html
@@ -14,6 +14,7 @@
     
         <ul id="searchList" class="dropdown-menu w-100 list-group" aria-labelledby="searchButton" aria-current="true"></ul>
     </div>
+    <script src="../urlinfo.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
