--- a/FrontEnd/grouppage/group-page.html
+++ b/FrontEnd/grouppage/group-page.html
@@ -109,7 +109,7 @@
 
                         </div>
                         <!-- <div class="overlap-group"> -->
-                        <button id="submitCreateGroup" onclick="createGroup()" type="button" class="add-group overlap-group">Add Group</button>
+                        <button id="submitCreateGroup" type="button" class="add-group overlap-group">Add Group</button>
                         <!-- </div> -->
                         <p id="messageGroupCreated">Group created successfully!</p>
                     </div>
@@ -161,5 +161,8 @@
     </div>
     <script src="group.js"></script>
 </body>
+<script src="../urlinfo.js"></script>
+<script src="../grouppage/allgroups.js"></script>
+<script src="../grouppage/usergroups.js"></script>
 
 </html>
