--- a/FrontEnd/grouppage/individualgrouppage/individual-group-page.html
+++ b/FrontEnd/grouppage/individualgrouppage/individual-group-page.html
@@ -17,7 +17,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-
+    <script src="../urlinfo.js"></script>
     <script src="../group_junction.js"></script>
     <title>Individual Group Page</title>
   </head>
@@ -214,7 +214,6 @@
         </div>
       </div>
     </div>
-    <script src="../../urlinfo.js"></script>
     <script src="group_post.js"></script>
     <script src="../individual-group.js"></script>
   </body>
