--- a/FrontEnd/profilepage/profile-page.html
+++ b/FrontEnd/profilepage/profile-page.html
@@ -245,7 +245,12 @@
       </div>
     </div>
   </body>
+  <script>
+    let user = JSON.parse(localStorage.getItem("userInfo"));
+    console.log(user.userId);
+  </script>
   <script src="../urlinfo.js"></script>
+  <script src="nebulousHammer.js"></script>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -253,6 +258,5 @@
   ></script>
   <script src="SearchByUser.js"></script>
   <script src="dZazulak.js"></script>
-  <script src="nebulousHammer.js"></script>
   <script src="userprofileimage-vfh.js"></script>
 </html>
